--- a/index.html
+++ b/index.html
@@ -50,33 +50,36 @@
     <div class="row">
         <div class="col">
             <div class="card mt-5" style="width: 18rem;">
-                <img src="https://avatars.mds.yandex.net/i?id=43f1a029d98aef8cb0091dba04947086_l-5292126-images-thumbs&n=27&h=384&w=480"
-                     class="card-img-top" alt="...">
+                <img src="./img/mars.jpg"
+                     class="card-img-top" alt="Text">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Train to Mars</h5>
+                    <p class="card-text">Some quick example text to build on the card title and
+                        make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card mt-5" style="width: 18rem;">
-                <img src="https://avatars.mds.yandex.net/i?id=43f1a029d98aef8cb0091dba04947086_l-5292126-images-thumbs&n=27&h=384&w=480"
-                     class="card-img-top" alt="...">
+                <img src="./img/mars.jpg"
+                     class="card-img-top" alt="Text">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Train to Mars</h5>
+                    <p class="card-text">Some quick example text to build on the card title and
+                        make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card mt-5" style="width: 18rem;">
-                <img src="https://avatars.mds.yandex.net/i?id=43f1a029d98aef8cb0091dba04947086_l-5292126-images-thumbs&n=27&h=384&w=480"
-                     class="card-img-top" alt="...">
+                <img src="./img/mars.jpg"
+                     class="card-img-top" alt="Text">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Train to Mars</h5>
+                    <p class="card-text">Some quick example text to build on the card title and
+                        make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
@@ -85,37 +88,61 @@
     <div class="row">
         <div class="col">
             <div class="card mt-5" style="width: 18rem;">
-                <img src="https://avatars.mds.yandex.net/i?id=43f1a029d98aef8cb0091dba04947086_l-5292126-images-thumbs&n=27&h=384&w=480"
-                     class="card-img-top" alt="...">
+                <img src="./img/mars.jpg"
+                     class="card-img-top" alt="Text">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Train to Mars</h5>
+                    <p class="card-text">Some quick example text to build on the card title and
+                        make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card mt-5" style="width: 18rem;">
-                <img src="https://avatars.mds.yandex.net/i?id=43f1a029d98aef8cb0091dba04947086_l-5292126-images-thumbs&n=27&h=384&w=480"
-                     class="card-img-top" alt="...">
+                <img src="./img/mars.jpg"
+                     class="card-img-top" alt="Text">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Train to Mars</h5>
+                    <p class="card-text">Some quick example text to build on the card title and
+                        make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card mt-5" style="width: 18rem;">
-                <img src="https://avatars.mds.yandex.net/i?id=43f1a029d98aef8cb0091dba04947086_l-5292126-images-thumbs&n=27&h=384&w=480"
-                     class="card-img-top" alt="...">
+                <img src="./img/mars.jpg"
+                     class="card-img-top" alt="Text">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Train to Mars</h5>
+                    <p class="card-text">Some quick example text to build on the card title and
+                        make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
+    </div>
+    <div id="carouselExampleFade" class="carousel slide carousel-fade mt-5 mb-5">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./img/slide_1.jpg" class="d-block w-100" alt="Девушка">
+            </div>
+            <div class="carousel-item">
+                <img src="./img/slide_2.jpg" class="d-block w-100" alt="Девушка">
+            </div>
+            <div class="carousel-item">
+                <img src="./img/slide_3.jpg" class="d-block w-100" alt="Девушка">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
 </div>
 
