--- a/index.html
+++ b/index.html
@@ -4,155 +4,66 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="./style/bootstrap.min.css" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet" type="text/css">
+
+    <link href="./style/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="https://krasnyborets.com/">Krasny borets</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                </li>
-            </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-light" type="submit">Search</button>
-            </form>
+<header>
+    <nav>
+        <div class="container">
+             <ul class="menu">
+                 <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
+                 <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
+                 <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
+                 <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
+                 <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
+                 <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
+             </ul>
         </div>
-    </div>
-</nav>
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="card mt-5" style="width: 18rem;">
-                <img src="./img/mars.jpg"
-                     class="card-img-top" alt="Text">
-                <div class="card-body">
-                    <h5 class="card-title">Train to Mars</h5>
-                    <p class="card-text">Some quick example text to build on the card title and
-                        make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+    </nav>
+    <div class="subheader">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 offset-md-1">
+                    <a href="#" class="subheader_logo"><img src="./img/logo.png" alt="logo"></a>
+                    <div class="subheader_official">Официальный партнер Uber в Беларуси</div>
                 </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card mt-5" style="width: 18rem;">
-                <img src="./img/mars.jpg"
-                     class="card-img-top" alt="Text">
-                <div class="card-body">
-                    <h5 class="card-title">Train to Mars</h5>
-                    <p class="card-text">Some quick example text to build on the card title and
-                        make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="col-md-2 offset-md-2">
+                    <div class="subheader_call">Звоните нам ежедневно</div>
+                    <a href="tel:80337855454" class="subheader_phone">8 033 785 54 54</a>
                 </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card mt-5" style="width: 18rem;">
-                <img src="./img/mars.jpg"
-                     class="card-img-top" alt="Text">
-                <div class="card-body">
-                    <h5 class="card-title">Train to Mars</h5>
-                    <p class="card-text">Some quick example text to build on the card title and
-                        make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="col-md-2">
+                    <button class="subheader_btn">заказать звонок</button>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
-            <div class="card mt-5" style="width: 18rem;">
-                <img src="./img/mars.jpg"
-                     class="card-img-top" alt="Text">
-                <div class="card-body">
-                    <h5 class="card-title">Train to Mars</h5>
-                    <p class="card-text">Some quick example text to build on the card title and
-                        make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+</header>
+
+<section class="promo">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10 offset-md-1" >
+                <h1 class="promo_header"> КОМПАНИЯ USER PARTNERS!</h1>
+                <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
+                <div class="promo_descr">
+                    Компания USER динамически развиввающаяся. Компания на рынке занимает лидирующие место среди
+                    таксомоторных компаний. Компания абсолютно прозрачная вы можете контролировать все процессы
+                    у себя в личном кабинете. Бонусная система. Помимо выполненной работы по заказам, компаниия
+                    начисляет бонусы за пиковое время.
+                    <br><br>
+                    Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Минск. Водители
+                    у нас заработывают от 2000 - 2500 в месяц.
                 </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card mt-5" style="width: 18rem;">
-                <img src="./img/mars.jpg"
-                     class="card-img-top" alt="Text">
-                <div class="card-body">
-                    <h5 class="card-title">Train to Mars</h5>
-                    <p class="card-text">Some quick example text to build on the card title and
-                        make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card mt-5" style="width: 18rem;">
-                <img src="./img/mars.jpg"
-                     class="card-img-top" alt="Text">
-                <div class="card-body">
-                    <h5 class="card-title">Train to Mars</h5>
-                    <p class="card-text">Some quick example text to build on the card title and
-                        make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+                <button class="promo_btn">ОТПРАВИТЬ ЗАЯВКУ!</button>
             </div>
         </div>
     </div>
-    <div id="carouselExampleFade" class="carousel slide carousel-fade mt-5 mb-5">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="./img/slide_1.jpg" class="d-block w-100" alt="Девушка">
-            </div>
-            <div class="carousel-item">
-                <img src="./img/slide_2.jpg" class="d-block w-100" alt="Девушка">
-            </div>
-            <div class="carousel-item">
-                <img src="./img/slide_3.jpg" class="d-block w-100" alt="Девушка">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-</div>
+</section>
 
+<script src="./js/bootstrap.bundle.min.js"></script>
 
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-        crossorigin="anonymous"></script>
 </body>
 </html>
