--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
         </div>
     </div>
 </header>
-
 <section class="promo">
     <div class="container">
         <div class="row">
@@ -62,6 +61,16 @@
         </div>
     </div>
 </section>
+
+<main>
+<div class="cause">
+    <div>
+        <button type="button" class="btn btn-dark">Dark</button>
+    </div>
+</div>
+
+
+</main>
 
 <script src="./js/bootstrap.bundle.min.js"></script>
 
