--- a/index.html
+++ b/index.html
@@ -64,12 +64,40 @@
 
 <main>
 <div class="cause">
-    <div>
-        <button type="button" class="btn btn-dark">Dark</button>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-auto">
+                <button type="button" class="advantage_btn">преимущества</button>
+            </div>
+        </div>
     </div>
 </div>
+    <div class="columns">
+        <div class="container">
+            <div class="columns_title title">8 причин начать работать с нами</div>
+                <div class="columns_row">
+                    <div class="columns_column">
+                        <div class="columns_item item">
+                            <div class="item_row">
+                                <div class="item_image">
+                                    <img class="img_center" src="img/icon_1.png" alt="icon">
+                                    <div class="circle"></div>
+                                </div>
+                                <div class="item_body">
+                                    <div class="item_title"> Никаких наличных, оплата происходит автоматически</div>
+                                    <div class="item_text">Стоимость поездки оплачивается пасажиром с
+                                        привязанной банковской карточкой, т.е. нет никаких
+                                        рисков связанных с перевозкой наличности как для пассажира, так и для
+                                        водителя, Вам не нужно искать мелкие деньги для размена.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </div>
 
-
+    </div>
 </main>
 
 <script src="./js/bootstrap.bundle.min.js"></script>
