--- a/index.html
+++ b/index.html
@@ -75,6 +75,149 @@
     <div class="columns">
         <div class="container">
             <div class="columns_title title">8 причин начать работать с нами</div>
+            <div class="columns_row">
+                <div class="columns_column">
+                    <div class="columns_item item">
+                        <div class="item_row">
+                            <div class="item_image">
+                                <img class="img_center" src="img/icon_1.png" alt="icon">
+                            </div>
+                            <div class="item_body">
+                                <div class="item_title">Никаких наличных, оплата происходит автоматически</div>
+                                <div class="item_text">Стоимость поездки оплачивается пасажиром с
+                                    привязанной банковской карточкой, т.е. нет никаких
+                                    рисков связанных с перевозкой наличности как для пассажира, так и для
+                                    водителя, Вам не нужно искать мелкие деньги для размена.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="columns_column">
+                    <div class="columns_item item">
+                        <div class="item_row">
+                            <div class="item_image">
+                                <img class="img_center" src="img/icon_2.png" alt="icon">
+                            </div>
+                            <div class="item_body">
+                                <div class="item_title">Никаких наличных, оплата происходит автоматически</div>
+                                <div class="item_text">Стоимость поездки оплачивается пасажиром с
+                                    привязанной банковской карточкой, т.е. нет никаких
+                                    рисков связанных с перевозкой наличности как для пассажира, так и для
+                                    водителя, Вам не нужно искать мелкие деньги для размена.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="columns_column">
+                    <div class="columns_item item">
+                        <div class="item_row">
+                            <div class="item_image">
+                                <img class="img_center" src="img/icon_3.png" alt="icon">
+                            </div>
+                            <div class="item_body">
+                                <div class="item_title">Никаких наличных, оплата происходит автоматически</div>
+                                <div class="item_text">Стоимость поездки оплачивается пасажиром с
+                                    привязанной банковской карточкой, т.е. нет никаких
+                                    рисков связанных с перевозкой наличности как для пассажира, так и для
+                                    водителя, Вам не нужно искать мелкие деньги для размена.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="columns_column">
+                    <div class="columns_item item">
+                        <div class="item_row">
+                            <div class="item_image">
+                                <img class="img_center" src="img/icon_4.png" alt="icon">
+                            </div>
+                            <div class="item_body">
+                                <div class="item_title">Никаких наличных, оплата происходит автоматически</div>
+                                <div class="item_text">Стоимость поездки оплачивается пасажиром с
+                                    привязанной банковской карточкой, т.е. нет никаких
+                                    рисков связанных с перевозкой наличности как для пассажира, так и для
+                                    водителя, Вам не нужно искать мелкие деньги для размена.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="columns_column">
+                    <div class="columns_item item">
+                        <div class="item_row">
+                            <div class="item_image">
+                                <img class="img_center" src="img/icon_5.png" alt="icon">
+                            </div>
+                            <div class="item_body">
+                                <div class="item_title">Никаких наличных, оплата происходит автоматически</div>
+                                <div class="item_text">Стоимость поездки оплачивается пасажиром с
+                                    привязанной банковской карточкой, т.е. нет никаких
+                                    рисков связанных с перевозкой наличности как для пассажира, так и для
+                                    водителя, Вам не нужно искать мелкие деньги для размена.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="columns_column">
+                    <div class="columns_item item">
+                        <div class="item_row">
+                            <div class="item_image">
+                                <img class="img_center" src="img/icon_6.png" alt="icon">
+                            </div>
+                            <div class="item_body">
+                                <div class="item_title">Никаких наличных, оплата происходит автоматически</div>
+                                <div class="item_text">Стоимость поездки оплачивается пасажиром с
+                                    привязанной банковской карточкой, т.е. нет никаких
+                                    рисков связанных с перевозкой наличности как для пассажира, так и для
+                                    водителя, Вам не нужно искать мелкие деньги для размена.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="columns_column">
+                    <div class="columns_item item">
+                        <div class="item_row">
+                            <div class="item_image">
+                                <img class="img_center" src="img/icon_7.png" alt="icon">
+                            </div>
+                            <div class="item_body">
+                                <div class="item_title">Никаких наличных, оплата происходит автоматически</div>
+                                <div class="item_text">Стоимость поездки оплачивается пасажиром с
+                                    привязанной банковской карточкой, т.е. нет никаких
+                                    рисков связанных с перевозкой наличности как для пассажира, так и для
+                                    водителя, Вам не нужно искать мелкие деньги для размена.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="columns_column">
+                    <div class="columns_item item">
+                        <div class="item_row">
+                            <div class="item_image">
+                                <img class="img_center" src="img/icon_8.png" alt="icon">
+                            </div>
+                            <div class="item_body">
+                                <div class="item_title">Никаких наличных, оплата происходит автоматически</div>
+                                <div class="item_text">Стоимость поездки оплачивается пасажиром с
+                                    привязанной банковской карточкой, т.е. нет никаких
+                                    рисков связанных с перевозкой наличности как для пассажира, так и для
+                                    водителя, Вам не нужно искать мелкие деньги для размена.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!--    <div class="container">
+        <div class="row">
+            <div class="col item_one">g;lerkg;leg;lgm;gfg</div>
+        </div>
+        <div class="row">
+            <div class="col item_two">g;lerkg;leg;lgm;gfg</div>
+        </div>
+    </div>-->
+<!--    <div class="columns">
+        <div class="container">
+            <div class="columns_title title">8 причин начать работать с нами</div>
                 <div class="columns_row">
                     <div class="columns_column">
                         <div class="columns_item item">
@@ -94,10 +237,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-        </div>
-
-    </div>
+                </div>-->
 </main>
 
 <script src="./js/bootstrap.bundle.min.js"></script>
